# arbtrbot

./: .gitignore  pyproject.toml
bot/services/api/: bingx.py  bitget.py  bitmart.py  bybit.py  coinbase.py  gate.py
bot/services/client/: client_side.py
