[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "vhs",email = "bogdanslava2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram[all] (>=3.17.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
